// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Auth /> Log in should render Login form 1`] = `
<form
  id="auth-form"
  onSubmit={[Function]}
>
  <h2>
    Welcome Back
  </h2>
  <div>
    <label
      htmlFor="username"
    >
       Username 
    </label>
    <input
      name="username"
      onChange={[Function]}
      type="text"
      value=""
    />
  </div>
  <div>
    <label
      htmlFor="password"
    >
       Password 
    </label>
    <input
      name="password"
      onChange={[Function]}
      type="password"
      value=""
    />
  </div>
  <button
    type="submit"
  >
    Sign in
  </button>
</form>
`;

exports[`<Auth /> Register should render Register form 1`] = `
<form
  id="auth-form"
  onSubmit={[Function]}
>
  <h2>
    Join Today
  </h2>
  <div>
    <label
      htmlFor="email"
    >
       Email 
    </label>
    <input
      id="auth-email"
      name="email"
      onChange={[Function]}
      type="text"
      value=""
    />
  </div>
  <div>
    <label
      htmlFor="username"
    >
       Username 
    </label>
    <input
      name="username"
      onChange={[Function]}
      type="text"
      value=""
    />
  </div>
  <div>
    <label
      htmlFor="password"
    >
       Password 
    </label>
    <input
      name="password"
      onChange={[Function]}
      type="password"
      value=""
    />
  </div>
  <button
    type="submit"
  >
    Register
  </button>
</form>
`;
